💄 Chart dark mode fix

--- a/src/components/atoms/DetailCard/DetailCard.module.css
+++ b/src/components/atoms/DetailCard/DetailCard.module.css
@@ -4,7 +4,7 @@
   width: 17.5rem; /* 280px */
   height: 10.75rem; /* 175px */
   background: var(--theme-gradient-radial);
-  box-shadow: 0 4px 4px #0007;
+  box-shadow: 0 4px 4px #0003;
   border-radius: 0.25rem; /* 4px */
 
   display: grid;
